--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.3",
+    "@zegocloud/zego-uikit-prebuilt": "^2.14.3-beta",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "firebase": "^11.6.0",
