--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "@tailwindcss/vite": "^4.1.4",
+    "@tailwindcss/vite": "^4.1.5",
     "@zegocloud/zego-uikit-prebuilt": "^2.14.3-beta",
-    "bootstrap": "^5.3.5",
-    "bootstrap-icons": "^1.11.3",
+    "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.12.1",
     "firebase": "^11.6.1",
-    "gsap": "^3.12.7",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.486.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.2",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.5.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
