--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "@tailwindcss/vite": "^4.1.5",
+    "@tailwindcss/vite": "^4.1.6",
     "@zegocloud/zego-uikit-prebuilt": "^2.14.3-beta",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
-    "firebase": "^11.6.1",
+    "firebase": "^11.7.1",
     "gsap": "^3.13.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.486.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.5.3",
+    "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
