--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.6",
     "@zegocloud/zego-uikit-prebuilt": "^2.14.3-beta",
