--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "firebase": "^11.7.1",
+    "framer-motion": "^12.10.5",
     "gsap": "^3.13.0",
     "install": "^0.13.0",
     "lucide-react": "^0.486.0",
@@ -27,6 +28,7 @@
     "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.6",
     "typescript": "^5.8.3"
   },
