--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@gsap/react": "^2.1.2",
-    "@tailwindcss/vite": "^4.1.6",
+    "@tailwindcss/vite": "^4.1.7",
     "@zegocloud/zego-uikit-prebuilt": "^2.14.3-beta",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
-    "firebase": "^11.7.1",
-    "framer-motion": "^12.10.5",
+    "firebase": "^11.7.3",
+    "framer-motion": "^12.12.1",
     "gsap": "^3.13.0",
     "install": "^0.13.0",
     "lucide-react": "^0.486.0",
@@ -26,10 +26,11 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.0",
+    "react-scroll": "^1.9.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.18",
-    "tailwindcss": "^4.1.6",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
